Fix inappropriate 'plastie' usage across training materials
- Remove 'plastie' used as adjective/modifier in MD and HTML files
- Keep valid surgical terms (rhinoplastie, mammoplastie, etc.)
- Ensure consistency between markdown and HTML content
- Total of 46 corrections across 9 files

--- a/html/evaluation/grilles.html
+++ b/html/evaluation/grilles.html
@@ -426,7 +426,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>Structure IMRAD plastie</td>
+                                            <td>Structure IMRAD adaptée</td>
                                             <td>__/5</td>
                                             <td>__/5</td>
                                             <td>__/5</td>
@@ -466,7 +466,7 @@
                             </div>
                             
                             <div class="mt-3">
-                                <h4>Meilleur pour plastie :</h4>
+                                <h4>Meilleur pour chirurgie plastique :</h4>
                                 <ul>
                                     <li>Technique op : _______</li>
                                     <li>Résultats PROM : _____</li>
