Simplify Exercise 1.1 Phase 2 evaluation
- Removed complex 20-point evaluation grid
- Replaced with 3 simple comparison questions
- Focus on practical utility rather than scoring
- Updated in all Session 1 files (markdown, HTML, slides)
- Added visual styling for simplified comparison guide

--- a/html/slides/session1-slides.html
+++ b/html/slides/session1-slides.html
@@ -459,19 +459,20 @@ Structure ta consultation :
 
         <!-- Slide 7: Analysis Phase -->
         <div class="slide">
-            <h1>Phase d'Analyse</h1>
-            <h2>Comparez les 3 réponses obtenues :</h2>
+            <h1>Phase d'Analyse Simplifiée</h1>
+            <h2>💡 Comparez simplement :</h2>
             <div class="card">
-                <h3>Points à observer :</h3>
-                <ul>
-                    <li>🔍 <strong>Qualité des réponses :</strong> Laquelle est la plus complète ?</li>
-                    <li>📝 <strong>Impact de la structure :</strong> Comment l'organisation du prompt améliore-t-elle la réponse ?</li>
-                    <li>🎯 <strong>Éléments qui améliorent :</strong> Quel rôle, quels détails, quelle structure ?</li>
-                    <li>👤 <strong>Personnalisation :</strong> L'adaptation au patient est-elle meilleure ?</li>
+                <h3>3 questions clés :</h3>
+                <ul style="font-size: 1.3rem; line-height: 2;">
+                    <li>✅ Quelle réponse est la plus utile cliniquement ?</li>
+                    <li>✅ Laquelle pourriez-vous vraiment utiliser avec un patient ?</li>
+                    <li>✅ Notez 1-2 différences majeures entre les réponses</li>
                 </ul>
             </div>
-            <div class="alert alert-info">
-                <p><strong>Temps alloué :</strong> 10 minutes pour cette analyse comparative</p>
+            <div class="alert alert-success">
+                <h3>L'essentiel :</h3>
+                <p>Un prompt bien structuré = Une réponse directement utilisable</p>
+                <p>Pas besoin de noter sur 20 - juste comprendre l'impact !</p>
             </div>
         </div>
 
