Create printable worksheet for Session 1 exercises
- Created session1-worksheet.html with fillable forms
- Includes all 7 exercises with only the parts students need to complete
- Optimized for A4 printing with proper page breaks
- Added student info section at the top
- Included checkboxes, fill-in lines, and notes sections
- Added evaluation grids for exercises that require scoring
- Added print-friendly CSS styling
- Added links to worksheet from main session and exercises pages
- Designed to be distributed in class for hands-on practice

--- a/html/exercises/session1-exercises.html
+++ b/html/exercises/session1-exercises.html
@@ -780,6 +780,7 @@ Format hospitalier standard avec codes CCAM.</code>
                 <!-- Navigation -->
                 <div class="exercise-nav">
                     <a href="index.html" class="btn btn-secondary">← Retour aux exercices</a>
+                    <a href="session1-worksheet.html" class="btn btn-print" target="_blank">📄 Version imprimable</a>
                     <a href="session2-exercises.html" class="btn btn-primary">Session 2 →</a>
                 </div>
             </div>
@@ -963,6 +964,22 @@ Format hospitalier standard avec codes CCAM.</code>
             font-style: italic;
             color: #6c757d;
             margin: 0;
+        }
+        
+        .btn-print {
+            background: #28a745;
+            color: white;
+            padding: 0.75rem 1.5rem;
+            text-decoration: none;
+            border-radius: 4px;
+            display: inline-block;
+            transition: background 0.3s;
+        }
+        
+        .btn-print:hover {
+            background: #218838;
+            color: white;
+            text-decoration: none;
         }
     </style>
 </body>
