Improve alignment between Session 1 HTML files
- Fixed exercise title consistency in slides (added 'Virtuelle' to Ex 1.1)
- Reordered navigation buttons for better logic (exercises → slides → print)
- Added security reminder to worksheet header
- Maintained excellent overall alignment across all 4 files
- All exercises, timings, cases, and evaluation criteria remain consistent

--- a/html/exercises/session1-worksheet.html
+++ b/html/exercises/session1-worksheet.html
@@ -188,7 +188,8 @@
     <div class="header">
         <h1>SESSION 1 : FEUILLE D'EXERCICES</h1>
         <p>Formation IA pour Chirurgie Plastique - ULB</p>
-        <p>Durée totale : 2h30 | 7 exercices pratiques</p>
+        <p>Durée totale : 2h30 | 7 exercices pratiques | ChatGPT Focus</p>
+        <p style="color: red; font-weight: bold;">⚠️ Toutes les données patient doivent être anonymisées</p>
     </div>
     
     <div class="student-info">
