--- a/html/slides/session1-slides.html
+++ b/html/slides/session1-slides.html
@@ -519,7 +519,7 @@
 
         <!-- Slide 9: Exercise 1.1 -->
         <div class="slide">
-            <h1>📋 EXERCICE 1.1 : Consultation Rhinoplastie</h1>
+            <h1>📋 EXERCICE 1.1 : Consultation Virtuelle Rhinoplastie</h1>
             <h2>Mission : Simuler consultation avec Cas A</h2>
             
             <div class="alert alert-warning">
