Replace 'champion' with more professional terms throughout
- Replaced 'champion' with 'optimal', 'performant', 'expert', or 'préféré' based on context
- Updated in all course materials, exercises, HTML files, and resources
- Changed section titles like 'Prompts Champions' to 'Prompts Haute Performance'
- Made language more professional while maintaining the same meaning
- Affected files include sessions, exercises, workflows, evaluation grids, and prompt libraries

--- a/html/exercises/session2-exercises.html
+++ b/html/exercises/session2-exercises.html
@@ -571,7 +571,7 @@ la structure et l'impact scientifique.
 - Gemini : ___/10
 - Perplexity : ___/10
 
-## Mes 2 Outils Champions
+## Mes 2 Outils Préférés
 1. ___________ pour ___________
 2. ___________ pour ___________
 
