--- a/html/resources/bibliotheque-prompts.html
+++ b/html/resources/bibliotheque-prompts.html
@@ -149,7 +149,7 @@
                 
                 <!-- Multi-IA Prompts -->
                 <section id="multi-ia" class="mb-4">
-                    <h2>🏆 Prompts Champions Multi-Plateformes</h2>
+                    <h2>🏆 Prompts Haute Performance Multi-Plateformes</h2>
                     
                     <div class="prompt-card">
                         <h3>🔬 Recherche Bibliographique Systématique - Version Comparative</h3>
