--- a/html/slides/session3-slides.html
+++ b/html/slides/session3-slides.html
@@ -390,7 +390,7 @@
                 <ul>
                     <li>🌟 Présentation de 2-3 pipelines TFE réussis</li>
                     <li>🚧 Obstacles rencontrés et solutions</li>
-                    <li>🏆 Outil champion identifié</li>
+                    <li>🏆 Outil le plus performant identifié</li>
                 </ul>
             </div>
             <div class="alert alert-warning">
